Regression test for https://bugs.eclipse.org/bugs/show_bug.cgi?id=561978